# casper-cpp-sdk

./:  CONTRIBUTING.md  .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README_DEV.md  SECURITY.md  doxygen-config
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
cmake/: FindCryptoPP.cmake
docs/: Doxyfile
examples/: CMakeLists.txt  HelloSDK.cpp  example_put_deploy1.json
lib/cryptopp/: badcert.cxx  cryptlib.vcxproj  cryptlib.vcxproj.filters  pem_eol.cxx  pem_test.cxx
lib/cryptopp-pem/: CMakeLists.txt
lib/cryptopp-pem/cryptopp/: .travis.yml  badcert.cxx  pem_common.cpp  pem_common.h  pem_eol.cxx  pem_read.cpp  pem_test.cxx  pem_write.cpp  x509cert.cpp  x509cert.h
lib/date/: date.h
lib/infint/: infint.h  main.cpp
lib/jsonrpccxx/: client.hpp
lib/magic_enum/: magic_enum.hpp
lib/nlohmann/: json.hpp
lib/rva/: variant.hpp
lib/wide-integer/: uintwide_t.h
src/: CMakeLists.txt  CasperClient.cpp  ServerEventsClient.cpp
src/include/: Base.h  CasperClient.h  ServerEventsClient.h
src/include/Algorithm/: Join.hpp
src/include/ByteSerializers/: BaseByteSerializer.cpp  BaseByteSerializer.h  CLValueByteSerializer.h  DeployApprovalByteSerializer.h  DeployByteSerializer.h  ExecutableDeployItemByteSerializer.h  GlobalStateKeyByteSerializer.h  NamedArgByteSerializer.h
src/include/JsonRpc/Connection/: HttpLibConnector.h  httplib.h
src/include/JsonRpc/ResultTypes/: GetAuctionInfoResult.h  GetBalanceResult.h  GetBlock.h  GetBlockResult.h  GetBlockTransfersResult.h  GetChainspecResult.h  GetDeployResult.h  GetDictionaryItemResult.h  GetEraInfoResult.h  GetItemResult.h  GetStateRootHashResult.h  GetStatus.h  GetStatusResult.h  InfoGetPeersResult.h  PutDeployResult.h  QueryGlobalStateResult.h  RpcResult.h  SpeculativeExecResult.h
src/include/SSE/: BlockAdded.h  DeployAccepted.h  DeployExpired.h  DeployProcessed.h  Fault.h  FinalitySignature.h  Step.h
src/include/Types/: AccessRights.h  Account.h  AuctionState.h  Bid.h  Block.h  BlockIdentifier.h  BlockInfo.h  CLConverter.cpp  CLConverter.h  CLMapType.h  CLType.cpp  CLType.h  CLType2.h  CLTypeInfo.h  CLTypeParsed.cpp  CLTypeParsed.h  CLTypeParsedConverter.cpp  CLTypeParsedConverter.h  CLValue.cpp  CLValue.h  ChainspecRawBytes.h  Configuration.h  Contract.h  ContractPackage.h  ContractWasm.h  Definitions.h  Delegator.h  Deploy.cpp  Deploy.h  DeployApproval.h  DeployHeader.h  DeployInfo.h  ED25519Key.cpp  ED25519Key.h  EntryPoint.h  EraEnd.h  EraInfo.h  EraSummary.h  EraValidators.h  ExecutableDeployItem.h  (+41 more)
src/include/Utils/: CEP57Checksum.cpp  CEP57Checksum.h  CryptoUtil.cpp  CryptoUtil.h  File.h  LogConfigurator.cpp  LogConfigurator.h  StringUtil.cpp  StringUtil.h
src/include/rva/: LICENSE  variant.hpp
test/: CLValueByteSerializerTest.cpp  CLValueByteSerializerTest.hpp  CMakeLists.txt  ClientTest.cpp  DeployItemByteSerializerTest.cpp  DeployItemByteSerializerTest.hpp  RpcTest.cpp  RpcTest.hpp  ServerEventsTest.cpp  ServerEventsTest.h  TempFileHandler.hpp  TestBase.hpp  Testtest.cpp
test/TestLibrary/: LICENSE  acutest.h
test/data/: SpeculativeExec.json  TestSourceSecretKey.hpp  TestTargetSecretKey.hpp  cpp_sdk_test_secret_key.pem
test/data/CLValue/: Any.json  Bool-False.json  Bool-True.json  ByteArray.json  I32.json  I64.json  Key.json  KeyAccount.json  KeyHash.json  List.json  ListByteArray32.json  ListOptionString.json  ListU256.json  ListU8.json  Map.json  Option.json  OptionListKey-NULL.json  OptionU64-NULL.json  OptionU64.json  PublicKey.json  ResultErr.json  ResultOk.json  String.json  Tuple1.json  Tuple2.json  Tuple3.json  U128.json  U256-2.json  U256.json  U32.json  U512-0.json  U512.json  U64.json  U8.json  URef.json  Unit.json
test/data/KeyPair/: cppsdkED25519_secret_key.pem  cppsdkSECP256k1_secret_key.pem
vcpkg/: vcpkg.txt
